crates/noxu-persist-derive/tests/ui/fail_unknown_entity_attr.stderr
error: unrecognised attribute on `#[entity(...)]`; allowed keys: `name = "..."`, `crate = "..."`
 --> tests/ui/fail_unknown_entity_attr.rs:4:10
  |
4 | #[entity(version = "wat")]
  |          ^^^^^^^
